# orgin

./: .dockerignore  .env.backup  .env.example  .flake8  .gitignore  =6.0.1  ARCHITECTURE.md  COMPLETION_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPER_ONBOARDING.md  Dockerfile  Interaction_Error_Matrix.md  JULES_ANALYSIS.md  NORTH_STAR_GAP_ANALYSIS.md  OBSERVABILITY_GUIDE.md  OPERATIONS_RUNBOOK.md  ORIGIN_SYSTEM_REPORT.md  PERFORMANCE_TESTING.md  PHASE_1_6_5_INTEGRATION_REPORT.md  PROGRESS.md  PROMPT_MANAGEMENT.md  README.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_v1.0.0.md  REPORT_project_status.md  SEARCH_GUIDE.md  TECH_DEBT_PROPOSALS.md  TEST_ENV_DESIGN.md  UX_IMPROVEMENTS.md  VERSIONING_GUIDE.md  alembic.ini  backup_after_init.sql  backup_before_init.sql  cloudbuild.yaml  docker-compose.monitoring.yml  docker-compose.test.yml  docker-compose.yml  dump.rdb  locustfile.py  (+8 more)
.github/workflows/: ci.yml  e2e.yml
alembic/: env.py
alembic/versions/: 00dbc3f6a941_add_hybrid_memory_and_fact_store_tables.py  229a42b81158_align_conversation_tables.py  31074482757e_create_kpi_snapshots_table.py  37ecae34152b_create_initial_tables_from_schema_sql.py  47cc50ae130a_create_two_tier_memory_schema.py  4f2a569fdcc5_encrypt_message_content.py  57f8c41a6674_merge_conversation_and_export_branches.py  6992fa3f62d0_create_audit_logs_table.py  7b8c9d0e1f23_restore_user_id_on_conversation_messages.py  7cfc6c70d573_merge_admin_settings_and_report_tables_.py  9b9d8d759b09_create_tables_for_admin_settings.py  a59e5b13d13d_harden_data_model_with_not_null_.py  afd65ac9e42e_merge_memory_and_security_branches.py  b1a2c3d4e5f6_add_report_tables.py  b2c3d4e5f6a7_add_conversation_tables.py  b9bb7fcd1ce6_add_user_fact_fields_v2.py  c3d4e5f6a7b8_add_export_jobs_and_tsvector.py  c5e8f7a6b3d2_add_auto_fact_extraction_flag.py  e5a9b8f7c6d0_add_performance_indexes_for_messages_and_reviews.py  e9681d25ea5c_merge_pr19_fact_system_with_existing_.py  f1b2c3d4e5f6_add_message_versions_table.py
app/: celery_app.py  main.py
app/api/: __init__.py  dependencies.py
app/config/: settings.py
app/core/: alerts.py  errors.py  metrics.py  monitoring.py  realtime.py  secrets.py  security.py  startup_checks.py  telemetry.py
app/db/: schema.sql
app/frontend/: eslint.config.js  index.html  jest.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.js
app/models/: __init__.py  conversation_schemas.py  enums.py  memory_schemas.py  orm_models.py  review_schemas.py  schemas.py
app/prompts/: prompts.yml
app/repositories/: __init__.py  room_repository.py
app/services/: __init__.py  admin_service.py  audit_service.py  auth_service.py  background_task_service.py  cache_service.py  cloud_storage_service.py  context_llm_service.py  conversation_repository.py  conversation_service.py  cost_tracking_service.py  database_service.py  export_service.py  external_api_service.py  fact_extractor_service.py  fact_types.py  file_validation_service.py  firebase_service.py  hybrid_search_service.py  intent_classifier_service.py  intent_service.py  kpi_service.py  llm_adapters.py  llm_service.py  llm_strategy.py  memory_service.py  message_pipeline.py  prompt_service.py  provider_errors.py  rag_service.py  realtime_service.py  redis_pubsub.py  retry_policy.py  review_service.py  review_templates.py  storage_service.py  sub_room_context_service.py  token_usage_tracker.py  user_fact_service.py
app/static/: index.html
app/tasks/: attachment_tasks.py  base_task.py  diagnostic_tasks.py  embedding_tasks.py  export_tasks.py  fact_tasks.py  kpi_tasks.py  memory_tasks.py  persona_tasks.py  review_tasks.py
app/tests/: __init__.py  conftest.py
app/utils/: __init__.py  helpers.py  logging_config.py  trace_id.py
config/: providers.yml
config/nginx/: nginx.conf
config/pgbouncer/: pgbouncer.ini  userlist.txt
config/prometheus/: alerts.yml  prometheus.yml
docs/reports/: CICD_ENHANCEMENT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_CONVERSATION.md  FINAL_REPORT.md  OBSERVABILITY_DESIGN.md  OPERATIONS.md  PROGRESS.md  PROJECT_ANALYSIS.md  RELEASE_NOTES.md  SECURITY_ASSESSMENT.md  TECH_DEBT_PROPOSALS.md  TEST_ENV_DESIGN.md
k8s/: api-deployment.yaml  api-service.yaml  configmap.yaml  secret.yaml  worker-default-deployment.yaml  worker-high-priority-deployment.yaml  worker-low-priority-deployment.yaml
scripts/: check_no_alert.js  reset_test_db.sh  rollback.sh  run_celery_smoke_test.py  run_locust_smoke.sh  run_migration.py  run_tests.sh  run_tests_with_clean_env.sh  setup_simple_test_schema.sql  setup_test_schema.sql  start-prod.sh
stubs/firebase_admin/: __init__.pyi  auth.pyi  credentials.pyi  firestore.pyi
tests/: __init__.py  conftest.py  conftest_old.py  test_auth.py  test_auth_smoke.py  test_dedupe.py  test_external_apis.py  test_issues.py  test_performance.py  test_presence_debug.py  test_realtime.py  test_user_flow.py
tests/e2e/: test_conversation_system.py  test_persona_review_export.py
tests/integration/: conftest.py  test_celery_review_flow.py  test_concurrency.py  (+5 more)
uploads/: 4f8ae3cc235647d881c2912655086ca0_test_document.txt  770f82e5-54d7-4995-a121-f8479050b8cf.yml
(+142 files in other folders)
