[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "origin-project"
version = "2.0.0"
description = "AI-powered review and analysis platform"
authors = [{name = "Origin Project Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.2",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "firebase-admin==6.5.0",
    "aiohttp==3.9.5",
    "slowapi==0.1.9",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = [
    "celery-types",
]

[tool.pyright]
typeCheckingMode = "basic"

# 한 번만 정의
reportUnboundVariable = true
reportDuplicateImport = true
reportWildcardImportFromLibrary = true
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedBaseClass = true
reportUntypedNamedTuple = true
reportPrivateUsage = true
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportOverlappingOverload = true
reportMissingSuperCall = true
reportUninitializedInstanceVariable = true
reportInvalidStringEscapeSequence = true
reportUnknownParameterType = true
reportUnknownArgumentType = true
reportUnknownLambdaType = true
reportUnknownVariableType = true
reportUnknownMemberType = true
reportMissingTypeArgument = true
reportInvalidTypeVarUse = true
reportCallInDefaultInitializer = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportAssertAlwaysTrue = true
reportSelfClsParameterName = true
reportImplicitStringConcatenation = true
reportUndefinedVariable = true

# 워크스페이스/가상환경
# venvPath = "."
# venv = ".venv"

# 경로 설정
include = ["app", "tests"]
exclude = ["app/frontend/**", ".venv/**", "**/__pycache__/**"]
stubPath = "stubs"
extraPaths = ["./app"]

# Python 설정
pythonVersion = "3.11"
pythonPlatform = "Darwin"
useLibraryCodeForTypes = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["stubs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "asyncio: mark a test as being asyncio-driven.",
    "e2e: mark a test as an end-to-end test.",
]
